--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   "dependencies": {
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
+    "axios": "^1.8.1",
     "expo": "~52.0.37",
+    "expo-secure-store": "^14.0.1",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
-    "react-native-gesture-handler": "^2.24.0",
-    "react-native-reanimated": "^3.17.0",
-    "react-native-safe-area-context": "^5.2.0",
-    "react-native-screens": "^4.9.1",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-paper": "^5.13.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "^4.14.1",
+    "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
