--- a/package.json
+++ b/package.json
@@ -15,18 +15,23 @@
     "@react-navigation/stack": "^7.1.1",
     "axios": "^1.8.1",
     "expo": "~52.0.37",
+    "expo-barcode-scanner": "^13.0.1",
     "expo-linking": "~7.0.5",
     "expo-secure-store": "^14.0.1",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.13.1",
+    "react-native-qrcode-scanner": "^1.5.5",
+    "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.11.2",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "expo-camera": "~16.0.17"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
